added web project

--- a/PassSystem/PassSystem.BackOffice.Web/Content/Site.css
+++ b/PassSystem/PassSystem.BackOffice.Web/Content/Site.css
@@ -22,3 +22,13 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.wrapper {
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+}
+
+span.field-validation-error {
+    color: red;
+}
