--- a/PassSystem/PassSystem.BackOffice.Web/Views/Shared/_Layout.cshtml
+++ b/PassSystem/PassSystem.BackOffice.Web/Views/Shared/_Layout.cshtml
@@ -3,40 +3,46 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>Пропускная система</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-</head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+    <script src="@Url.Content("~/Scripts/sidebar/sidebar.js")"></script>
+    <link href="@Url.Content("~/Content/font-awesome/css/font-awesome.min.css")" rel="stylesheet" />
 
     @Scripts.Render("~/bundles/jquery")
+    
+    <script>
+      $( function() {
+          $("input[type='datetime']").datepicker({
+          	dateFormat : "dd.mm.yy",
+          	monthNames : ['Январь','Февраль','Март','Апрель','Май','Июнь','Июль','Август','Сентябрь','Октябрь','Ноябрь','Декабрь'],
+          	dayNamesMin : ['Вс','Пн','Вт','Ср','Чт','Пт','Сб'],
+          });
+      });
+      
+      </script>
+    
+</head>
+<body>
+
+    
+    
+    <script src="../../Scripts/jquery-ui.js"></script>
+
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
+<div id="wrapper">
+    @{ Html.RenderAction("Index", "Infrastructure");}
+    <div id="content">
+        <div class="container-fluid full-height">
+            @RenderBody()
+        </div>
+    </div>
+    <div inform class="inform-animate inform-fixed inform-shadow"></div>
+</div>
+
+
+
 </body>
 </html>
