--- a/PassSystem/PassSystem.BackOffice.Web/Content/Site.css
+++ b/PassSystem/PassSystem.BackOffice.Web/Content/Site.css
@@ -1,12 +1,6 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 10px;
     padding-bottom: 20px;
-}
-
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -31,4 +25,44 @@ textarea {
 
 span.field-validation-error {
     color: red;
+}
+
+.sidebar{
+    height: 100%;
+    width: 160px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+
+.sidebar a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #FFFFFF;
+    display: block;
+}
+
+.sidebar a:hover {
+    color: #008000;
+}
+
+.sidebar-header {
+    padding: 6px 8px 6px 16px;
+    font-size: 15px;
+    color: #ffa32e;
+    display: block;
+}
+
+.sidebar-header hr{
+    color: #ffa32e;
+}
+
+.content {
+    margin-left: 160px;
+    padding: 0px 10px;
 }
