--- a/PassSystem/PassSystem.BackOffice.Web/Views/EmployeePasses/Index.cshtml
+++ b/PassSystem/PassSystem.BackOffice.Web/Views/EmployeePasses/Index.cshtml
@@ -3,6 +3,9 @@
 @{
     ViewBag.Title = "title";
     Layout = "../Shared/_Layout.cshtml";
+    List<String> errorMessages = TempData["ErrorMessage"] != null
+        ? TempData["ErrorMessage"] as List<String>
+        : new List<string>();
 }
 
 <div className="container-fluid">
@@ -12,32 +15,42 @@
                 <div className="card-body">
                     <h2 className="card-title">Пропуска</h2>
                     <hr/>
-                </div>
                 
-                <form>
-                <div className="form-row">
-                    <div class="form-group col-md-3">
-                        <label class="font-weight-bold" for="passId">Номер сотрудника</label>
-                        <input type="number" id="passId" placeholder="Введите номер"/>
+                    <div class="form-row">
+                        <div class="form-group col-12 col-sm-6 col-lg-3">
+                            <label class="font-weight-bold" for="passId">Номер сотрудника</label>
+                            <input type="number" id="passId" placeholder="Введите номер"/>
+                        </div>
+                        <div class="form-group col-12 col-sm-6 col-lg-3">
+                            <label class="font-weight-bold" for="passId">Фамилия сотрудника</label>
+                            <input type="text" id="employeeLastName" placeholder="Введите фамилию"/>
+                        </div>
+                        <div class="form-group col-12 col-sm-6 col-lg-3">
+                            <input type="button" class="btn btn-primary mb-5" value="Найти" onclick="findItems();"/>
+                        </div>
                     </div>
-                    <div class="form-group col-md-3">
-                        <label class="font-weight-bold" for="passId">Фамилия сотрудника</label>
-                        <input type="text" id="employeeLastName" placeholder="Введите фамилию"/>
-                    </div>
-                    <div class="form-group col-md-3">
-                        <input type="button" class="btn btn-primary" value="Найти" onclick="findItems();"/>
-                    </div>
-                </div>
                 
-                <div class="form-row">
-                    @Html.ActionLink("Добавить пропуск", "Add", "EmployeePasses", null, new {@class="btn btn-success"})
+                    <div class="form-row">
+                        <div class="form-group ml-2">
+                            @Html.ActionLink("Добавить пропуск", "Add", "EmployeePasses", null, new {@class = "btn btn-success"})    
+                        </div>
+                    </div>
                 </div>
-                </form>
             </div>
         </div>
     </div>
+    @if (errorMessages.Any())
+    {
+        <div class="alert alert-danger" role="alert">
+            @foreach (var error in errorMessages)
+            {
+                <p>@error</p><br/>
+            }
+        </div>
+    }
     @if (Model.EmployeePasses.Length == 0)
     {
+        
         <div class="alert alert-warning" role="alert">
             @Model.ErrorMessage
         </div>
