--- a/PassSystem/PassSystem.BackOffice.Web/Views/Infrastructure/Index.cshtml
+++ b/PassSystem/PassSystem.BackOffice.Web/Views/Infrastructure/Index.cshtml
@@ -3,16 +3,17 @@
    Layout = null;
 }
 
-<nav id="sidebar" class="active">
+<nav id="sidebar" class="sidebar active">
     <div class="sidebar-header" id="sidebar-header">
-        <h3>@Model.Title</h3>
+        <p>@Model.Title</p>
+        <hr/>
     </div>
     <ul class="list-unstyled components">
         @foreach (var item in Model.MainItems)
         {
             <li class="@(item.Active ? "active" : String.Empty)">
                 <a href="@item.Url">
-                    <i class="fa-fw @item.Class"></i><span>@item.Text</span>
+                    <i class="@item.Class"></i><span>@item.Text</span>
                 </a>
             </li>
         }
